tests/parser/should_fail/T3751.hs
module ShouldFail where

x = "\ยง"
